@@ -1,5 +1,16 @@
 2015-01-22  Matthew Hanson  <matthew_hanson@apple.com>
 
+        Merge r171392. rdar://problem/19451349
+
+    2014-07-22  Brent Fulgham  <bfulgham@apple.com>
+
+            [Win] Build fix for Windows bots
+
+            * platform/graphics/avfoundation/InbandTextTrackPrivateAVF.cpp: Provide missing
+            structure definition when needed by bot.
+
+2015-01-22  Matthew Hanson  <matthew_hanson@apple.com>
+
         Merge r171388. rdar://problem/19451349
 
     2014-07-22  Brent Fulgham  <bfulgham@apple.com>
